[package]
name = "venomd"
version = "0.1.0"
authors = ["tekjar <raviteja@bytebeam.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
derive_more = { version = "0.99", features = ["from"] }
argh = "0.1"
log = "0.4"
pretty_env_logger = "0.4"
serde_json = "1"
serde = { version = "1", features = ["derive"] }

