[package]
name = "venom"
version = "0.1.0"
authors = ["tekjar <raviteja@bytebeam.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smol = "0.1"
futures-util = { version = "0.3" }
tokio = { version = "0.2", features = ["macros"] }
thiserror = "1"
argh = "0.1"
log = "0.4"
pretty_env_logger = "0.4"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
confy = "0.4.0"

