[package]
name = "venom"
version = "0.1.0"
authors = ["tekjar <raviteja@bytebeam.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rumqttc = { path = "../../rumqtt/rumqttc" }
rumqttd = { path = "../../rumqtt/rumqttd" }
log = "0.4"
pretty_env_logger = "0.4"
thiserror = "1"
confy = "0.4"
serde = { version = "1", features = ["derive"] }
colored = "2"

